Bug 1621174 - Fix error handling for setting KeyframeEffect.pseudoElement. r=birtles,smaug

We should throw a DOMException SyntaxError when setting pseudoElement a
syntactically invalid string or an unsupported pseudo.

Differential Revision: https://phabricator.services.mozilla.com/D66321

--HG--
extra : moz-landing-system : lando